# ShopSense

./: .env.example  .gitignore  Articles.txt  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: keep_alive.yml
app/: main.py
app/api/: routes.py
app/schemas/: response.py
app/services/: cache.py  recommendation.py
artifacts/: item_embeddings.npy  item_mapping.pkl  model_manifest.json  reverse_item_mapping.pkl  reverse_user_mapping.pkl  user_mapping.pkl
artifacts/models/: als.joblib  bpr.joblib  content.joblib  hybrid.joblib  hybrid_mmr.joblib  item_item_decay.joblib  item_item_raw.joblib  popularity.joblib
configs/: default.yaml
data/raw/: articles.csv
frontend/: app.js  index.html  style.css
recommender/: artifacts.py
recommender/data/: interaction_matrix.py  loader.py  preprocessor.py  splitter.py
recommender/evaluation/: evaluator.py  metrics.py  segments.py
recommender/experiments/: ab_simulator.py  tracker.py
recommender/models/: als_model.py  base.py  bpr_model.py  content.py  hybrid.py  item_item.py  mmr.py  popularity.py
recommender/monitoring/: drift.py
recommender/serving/: explainability.py
reports/: metrics.json  model_comparison.csv  segment_metrics.json
scripts/: colab_embedder.py  create_synthetic_data.py  evaluate_all.py  setup_data.py  train_all.py
streamlit_app/: app.py
tests/: test_api.py  test_cache.py  test_metrics.py  test_mmr.py  test_splitter.py
