[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "shopsense"
version = "0.1.0"
description = "Hybrid E-commerce Recommendation Engine"
authors = [
    {name = "Akshansh Ranjan"}
]
dependencies = [
    # Defined in requirements.txt
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
